[package]
name = "rss-feed"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls-webpki-roots"] }
rss = "2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.48", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
bytes = "1.10.1"
anyhow = "1.0.100"
blake3 = "1.8.2"
html2text = "0.15.5"
bincode = { version = "2.0.1", features = ["serde"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-ring-webpki", "postgres", "macros" ] }
chrono = { version = "0.4.42", features = [ "serde" ] }
